manifests/ingress/istio-tcp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tcp-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: port
      protocol: tcp
    hosts:
    - grafana-istio-tcp.example.com
    - prometheus-istio-tcp.example.com
    - alertmanager-istio-tcp.example.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tcp-vs-grafana
  namespace: monitoring
spec:
  hosts:
    - grafana-istio-tcp.example.com
  gateways:
  - monitoring/tcp-gateway
  tcp:
  - match:
    - port: 8080
    route:
    - destination:
        port:
          number: 3000
        host: grafana.monitoring.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tcp-vs-prometheus
  namespace: monitoring
spec:
  hosts:
    - prometheus-istio-tcp.example.com
  gateways:
  - monitoring/tcp-gateway
  tcp:
  - match:
    route:
    - destination:
        port:
          number: 9090
        host: prometheus-k8s.monitoring.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tcp-vs-alertmanager
  namespace: monitoring
spec:
  hosts:
    - alertmanager-istio-tcp.example.com
  gateways:
  - monitoring/tcp-gateway
  tcp:
  - match:
    route:
    - destination:
        port:
          number: 9093
        host: alertmanager-main.monitoring.svc.cluster.local
